# credit-modelling-ml-project

./: .coderabbit.yaml  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml  tasks.ps1
.github/workflows/: ci.yml  deploy.yml  model_quality_gate.yml
config/: base.yaml  development.yaml  production.yaml
docker/: Dockerfile.api  Dockerfile.training  docker-compose.yml
k8s/: configmap.yaml  deployment-api.yaml  hpa-api.yaml  service-api.yaml
notebooks/: 01_data_exploration.ipynb  02_feature_analysis.ipynb  03_pd_model_comparison.ipynb  04_lgd_ead_analysis.ipynb  05_stress_testing.ipynb  06_shap_explainability.ipynb
pipelines/airflow/: __init__.py
pipelines/airflow/dags/: __init__.py  batch_scoring_dag.py  data_ingestion_dag.py  feature_computation_dag.py  model_retraining_dag.py  monitoring_dag.py
pipelines/airflow/plugins/: __init__.py  model_quality_operator.py
pipelines/dbt/: dbt_project.yml
src/: __init__.py
src/data_ingestion/: __init__.py  aa_connector.py  ar_parser.py  bsr1_parser.py  bureau_connector.py  crilc_parser.py  gst_connector.py  synthetic_generator.py
src/data_quality/: __init__.py  schema.py  validator.py
src/data_quality/expectations/: bureau_suite.json  crilc_suite.json  feature_suite.json
src/explainability/: __init__.py  model_card.py  reason_codes.py  shap_explainer.py
src/feature_engineering/: __init__.py  account_features.py  bureau_features.py  business_features.py  feature_store.py  gst_features.py  loaders.py  loan_features.py  macro_features.py  pipeline.py  woe_encoder.py
src/models/: __init__.py  quality.py  splits.py
src/models/ead/: __init__.py  ccf_model.py  downturn.py  term_loan.py  trainer.py
src/models/lgd/: __init__.py  downturn.py  stage1_classifier.py  stage2_regressor.py  trainer.py
src/models/pd/: __init__.py  calibrator.py  lightgbm_model.py  random_forest.py  scorecard.py  tabnet_model.py  trainer.py  xgboost_model.py
src/monitoring/: __init__.py  dashboard.py  drift_detector.py  performance_tracker.py  retraining_trigger.py
src/serving/: __init__.py  api.py  middleware.py  model_loader.py  predict.py  schemas.py
src/validation/: __init__.py  calibration.py  discrimination.py  expected_loss.py  fairness.py  report_generator.py  stability.py  stress_testing.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_feature_pipeline.py  test_monitoring_pipeline.py  test_scoring_pipeline.py
tests/unit/: __init__.py  test_api_schemas.py  test_ead_models.py  test_feature_engineering.py  test_lgd_models.py  test_pd_models.py  test_pd_random_forest.py  test_pd_xgboost.py  test_validation_metrics.py  test_woe_encoder.py
