# Credit Risk Modelling Platform — managed with uv (https://docs.astral.sh/uv/)
# Base install is intentionally lean for fast, reliable Windows setup.
# Heavy / finicky dependencies (torch, great-expectations, feast, airflow, dbt)
# live in optional-dependency extras — install only what a phase needs, e.g.:
#   uv sync --extra ingest --extra dq
#   uv sync --all-extras                      # everything
[project]
name = "credit-risk-platform"
version = "0.1.0"
description = "End-to-end PD / LGD / EAD credit risk modelling platform (Indian market data)"
readme = "README.md"
requires-python = ">=3.11,<3.12"

dependencies = [
    # Core data
    "pandas>=2.2",
    "numpy>=1.26,<2.0",       # <2.0 for shap/numba compatibility
    "pyarrow>=15.0",
    "polars>=0.20",
    # ML
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "lightgbm>=4.3",
    "optuna>=3.5",
    "imbalanced-learn>=0.12",
    "statsmodels>=0.14",      # beta regression / fractional logit for LGD
    "scipy>=1.11",
    # Explainability
    "shap>=0.45",
    # Experiment tracking
    "mlflow>=2.11",
    # Data quality (schemas)
    "pandera>=0.18",
    # Serving
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pydantic>=2.6",
    "python-jose>=3.3",
    # Monitoring
    "prometheus-client>=0.20",
    # Reporting / plotting
    "matplotlib>=3.8",
    "plotly>=5.20",
    # Utilities
    "pyyaml>=6.0",
    "joblib>=1.3",
    "click>=8.1",
]

[project.optional-dependencies]
# Data ingestion / parsers (Phase 1: ar_parser, bsr1_parser, connectors)
ingest = [
    "pdfplumber>=0.11",
    "camelot-py>=0.11",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "openpyxl>=3.1",
    "requests>=2.31",
]
# Great Expectations data-quality suites (Phase 1)
dq = ["great-expectations>=0.18,<0.19"]
# Feast feature store + Redis online store (Phase 2/6)
featurestore = ["feast>=0.38", "redis>=5.0"]
# Deep learning: TabNet PD model (Phase 3)
deep = ["torch>=2.2", "pytorch-tabnet>=4.1"]
# Local model-agnostic explanations (Phase 6)
explain = ["lime>=0.2"]
# Evidently drift dashboards (Phase 7)
monitoring = ["evidently>=0.4"]
# dbt warehouse transformations — local DuckDB
dbt = ["dbt-core>=1.7", "dbt-duckdb>=1.7"]
# dbt cloud warehouse adapters (prod)
warehouse = ["dbt-snowflake>=1.7", "dbt-bigquery>=1.7"]
# Airflow orchestration (install separately; heavy)
airflow = ["apache-airflow>=2.9"]
# Notebook execution / EDA
notebooks = ["papermill>=2.5", "ipykernel>=6.29", "jupyterlab>=4.0"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.3",
    "mypy>=1.9",
    "pre-commit>=3.7",
    "httpx>=0.27",        # async FastAPI test client
    "types-pyyaml",
    "pandas-stubs",
]

[tool.uv]
package = false           # run modules from repo root (python -m src.models.pd.trainer)

# --------------------------------------------------------------------------- #
# Tooling
# --------------------------------------------------------------------------- #
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "SIM", "C4"]
ignore = ["E501"]         # do not fail on long lines in docstrings/comments

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]          # re-exports
"notebooks/*" = ["E402"]
"pipelines/airflow/dags/*" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_configs = true
disallow_untyped_defs = false      # tighten per-module as code is implemented
namespace_packages = true
explicit_package_bases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
    "integration: end-to-end tests that need the full stack",
    "slow: long-running tests (model training, Optuna sweeps)",
]
